--- a/pages/about.html
+++ b/pages/about.html
@@ -122,4 +122,7 @@
   .link a {
     color: rgba(var(--bs-tertiary-bg-rgb),var(--bs-bg-opacity))!important
   }
+  .link a:hover{
+    filter: contrast(100);
+  }
 </style>
