--- a/pages/portofolio.html
+++ b/pages/portofolio.html
@@ -49,7 +49,7 @@
             <th>Title</th>
             <th>Issue Date</th>
             <th>Issuer</th>
-            <th>Action</th>
+            <th class="center">Action</th>
           </tr>
         </thead>
         <tbody id="achievementList">
@@ -64,7 +64,7 @@
             <th>Title</th>
             <th>Publication Date</th>
             <th>Publisher</th>
-            <th>Action</th>
+            <th class="center">Action</th>
           </tr>
         </thead>
         <tbody id="articleList">
