--- a/plugins/navbar.html
+++ b/plugins/navbar.html
@@ -2,8 +2,8 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a id="logo" class="navbar-brand logo white" href="#">
-            <img src="../assets/logo.png" />
-            <img style="width: 50px;" src="../assets/title.png" />
+            <img src="/assets/logo.png" />
+            <img style="width: 50px;" src="/assets/title.png" />
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,7 +21,7 @@
 </html>
 
 <script>
-  fetch("../databases/navbar.json")
+  fetch("/databases/navbar.json")
     .then(response => response.json())
     .then(data => {
       console.log(data)
