--- a/plugins/navbar.html
+++ b/plugins/navbar.html
@@ -1,6 +1,5 @@
 <html>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="contain">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary contain">
           <a id="logo" class="navbar-brand logo white" href="#">
             <img src="/assets/logo.png" />
             <img style="width: 50px;" src="/assets/title.png" />
@@ -16,7 +15,6 @@
               <span id="setTheme" class="mdi mdi-weather-night white"></span>
             </button>
           </div>
-        </div>
     </nav>
 </html>
 
@@ -45,7 +43,7 @@
 </script>
 
 <style>
-  .contain {
+  .contain{
     display: flex;
     flex-wrap: inherit;
     align-items: center;
@@ -57,5 +55,5 @@
     padding-left: calc(var(--bs-gutter-x) * .5);
     margin-right: auto;
     margin-left: auto;
-}
+  }
 </style>
