--- a/cms/editor.html
+++ b/cms/editor.html
@@ -77,7 +77,7 @@
             console.log(response)
         })
     }
-    let article = JSON.parse(fetch("../databases/navbar.json"))
+    let article = JSON.parse(fetch("../databases/articles.json"))
     console.log(article)
 </script>
 
