--- a/cms/editor.html
+++ b/cms/editor.html
@@ -65,24 +65,19 @@
         })
     })
     function submit(){
-        article.title = $("#titles").val()
-        article.content = $("#editor").val()
-        var input = {
-            url: "../databases/articles.json",
-            method: "POST",
-            contentType: "application/json",
-            data: JSON.stringify(article)
-        }
-        $.ajax(input).done(function(response){
-            console.log(response)
-        })
-    }
-    fetch("../databases/articles.json")
+        fetch("../databases/articles.json")
         .then(response => response.json())
         .then(data =>  {
+            console.log(data)
             let json = JSON.stringify(data)
-            console.log(json)
+            json.reports.push({
+                "id": json.reports.length + 1,
+                "title": $("#titles").val(),
+                "content": $("#editor").val()
+            })
+            console.log(JSON.parse(JSON.stringify(json)))
         })
+    }
 </script>
 
 <style>
