--- a/cms/editor.html
+++ b/cms/editor.html
@@ -69,7 +69,7 @@
         .then(response => response.json())
         .then(data =>  {
             console.log(data)
-            let json = JSON.stringify(data)
+            let json = JSON.parse(data)
             json.reports.push({
                 "id": "" + json.reports.length + 1,
                 "title": "" + $("#titles").val(),
