--- a/cms/editor.html
+++ b/cms/editor.html
@@ -68,8 +68,8 @@
         fetch("../databases/articles.json")
         .then(response => response.json())
         .then(data =>  {
-            console.log(data)
             let json = JSON.parse(data)
+            console.LOG(json)
             json.reports.push({
                 "id": "" + json.reports.length + 1,
                 "title": "" + $("#titles").val(),
