--- a/cms/editor.html
+++ b/cms/editor.html
@@ -48,6 +48,7 @@
 </html>
 
 <script src="../plugins/script.js"></script>
+<script src="../databases/articles.js"></script>
 <script>
     $.get("../plugins/navbar.html", function(data){
             $("#navbar").replaceWith(data)
@@ -64,31 +65,6 @@
             preview.html(editor.val())
         })
     })
-    function submit(){
-        fetch("../databases/articles.json")
-        .then(response => response.json())
-        .then(data =>  {
-            let json = JSON.parse(JSON.stringify(data))
-            console.log(json)
-            json.push({
-                "id": Math(Number(json.length) + 1),
-                "title": $("#titles").val(),
-                "content": $("#editor").val()
-            })
-            console.log(JSON.parse(JSON.stringify(json)))
-        })
-        $.ajax({
-            url: "../databases/articles.json",
-            dataType: "json",
-            success: function(response) {
-                let article = JSON.parse(JSON.stringify(response))
-                article.id = Math(Number(json.length) + 1)
-                article.title = $("#titles").val()
-                article.content = $("#editor").val()
-                article.push("success");
-            }
-        })
-    }
 </script>
 
 <style>
