--- a/index.html
+++ b/index.html
@@ -40,32 +40,11 @@
 
 </html>
 
+<script src="/plugins/script.js"></script>
 <script>
   $.get("/plugins/navbar.html", function(data){
             $("#navbar").replaceWith(data);
         })
-  function theme() {
-    let html = document.getElementsByTagName("html")[0].dataset.bsTheme
-    let set = document.getElementById("setTheme").classList
-    let logo = document.getElementById("logo").classList
-    let footer = document.getElementById("footer").classList
-    if (html === "dark") {
-      document.getElementsByTagName("html")[0].dataset.bsTheme = undefined
-      set.add("mdi-weather-sunny")
-      set.remove("mdi-weather-night")
-      set.remove("white")
-      logo.remove("white")
-      footer.remove("white")
-    } else {
-      document.getElementsByTagName("html")[0].dataset.bsTheme = "dark"
-      set.add("mdi-weather-night")
-      set.remove("mdi-weather-sunny")
-      set.add("white")
-      logo.add("white")
-      footer.add("white")
-    }
-  }
-
   // STONE ANIMATION //
   const stone = data => {
     const stoneTemplate = document.createElement("template")
