--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <script src="/plugins/script.js"></script>
 <script>
-  $.get("/plugins/navbar.html", function(data){
+  $.get("./plugins/navbar.html", function(data){
             $("#navbar").replaceWith(data);
         })
   // STONE ANIMATION //
