--- a/about/index.html
+++ b/about/index.html
@@ -77,7 +77,7 @@
       document.getElementById("hibi").classList.remove("white")
     }
 } else {
-    localStorage.clear()
+    localStorage.clear
 }
 </script>
 
