--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
     <title>ABOUT</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
-    <link href="/plugins/style.css" rel="stylesheet">
+    <link href="/.plugins/style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -22,7 +22,7 @@
     <div id="navbar"></div>
     <section class="container-fluid">
         <div class="pt-5 pb-5 d-lg-flex justify-content-evenly">
-            <img class="img-fluid ava" src="/assets/hibikun.png">
+            <img class="img-fluid ava" src="/.assets/hibikun.png">
             <div class="about">
                 <h1>Habil Ihsan</h1>
                 <p>Hello, y'all! I am Habil Ihsan. I was born in Padang, on March 1, 2001. I am an undergraduate student of Physics Education, Universitas Negeri Padang.
@@ -54,19 +54,19 @@
                   <a href="https://www.youtube.com/@habilihsanproject/"><span class="mdi mdi-youtube contact"></span></a>
               </div>
           </div>
-          <img class="img-fluid ava white" id="hibi" src="/assets/hibi.png">
+          <img class="img-fluid ava white" id="hibi" src="/.assets/hibi.png">
       </div>
   </section>
 </body>
 
 <footer>
   <p>©2023</p>
-  <img id="footer" class="white" src="/assets/powered.png">
+  <img id="footer" class="white" src="/.assets/powered.png">
 </footer>
 
 </html>
 
-<script src="/plugins/script.js"></script>
+<script src="/.plugins/script.js"></script>
 <script>
   var getTheme = localStorage.getItem("themes")
   if (getTheme == "true") {
