--- a/-plugins/navbar.html
+++ b/-plugins/navbar.html
@@ -12,7 +12,7 @@
             <ul class="navbar-nav" id="navbarList">
             </ul>
             <button onclick="setTheme()" class="theme">
-              <span id="setTheme" class="mdi mdi-weather-night white"></span>
+              <span id="setTheme" class="mdi mdi-weather-night"></span>
             </button>
           </div>
     </nav>
