--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   if (getTheme == "true") {
     document.getElementsByTagName("html")[0].dataset.bsTheme = localStorage.getItem("theme")
 } else {
-    localStorage.clear
+    localStorage.clear()
 }
   // STONE ANIMATION //
   const stone = data => {
