--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <footer>
   <p>©2023</p>
-  <img id="footer" class="white" src="/-assets/powered.png">
+  <img id="footer" class="light" src="/-assets/powered.png">
 </footer>
 
 </html>
