--- a/-plugins/navbar.html
+++ b/-plugins/navbar.html
@@ -1,6 +1,6 @@
 <html>
     <nav class="navbar navbar-expand-lg bg-body-tertiary contain">
-          <a id="logo" class="navbar-brand logo white" href="https://habilihsanproject.github.io/">
+          <a id="logo" class="navbar-brand logo light" href="https://habilihsanproject.github.io/">
             <img src="/-assets/logo.png" />
             <img style="width: 50px;" src="/-assets/title.png" />
           </a>
