--- a/index.html
+++ b/index.html
@@ -42,9 +42,13 @@
 
 <script src="/-plugins/script.js"></script>
 <script>
-  var getTheme = localStorage.getItem("themes")
-  if (getTheme == "true") {
-    document.getElementsByTagName("html")[0].dataset.bsTheme = localStorage.getItem("theme")
+  var getTheme = localStorage.getItem("theme")
+  if (getTheme == "dark") {
+    document.getElementsByTagName("html")[0].dataset.bsTheme = "dark"
+    darkTheme()
+} else if (getTheme == "undefined") {
+    document.getElementsByTagName("html")[0].dataset.bsTheme = "undefined"
+    lightTheme()
 } else {
     localStorage.clear()
 }
