--- a/about/index.html
+++ b/about/index.html
@@ -68,14 +68,15 @@
 
 <script src="/-plugins/script.js"></script>
 <script>
-  var getTheme = localStorage.getItem("themes")
-  if (getTheme == "true") {
-    document.getElementsByTagName("html")[0].dataset.bsTheme = localStorage.getItem("theme")
-    if (localStorage.getItem("theme") == "dark") {
-      document.getElementById("hibi").classList.replace("dark", "light")
-    } else {
-      document.getElementById("hibi").classList.replace("light", "dark")
-    }
+  var getTheme = localStorage.getItem("theme")
+  if (getTheme == "dark") {
+    document.getElementsByTagName("html")[0].dataset.bsTheme = "dark"
+    document.getElementById("hibi").classList.replace("light", "dark")
+    darkTheme()
+} else if (getTheme == "undefined") {
+    document.getElementsByTagName("html")[0].dataset.bsTheme = "undefined"
+    document.getElementById("hibi").classList.replace("dark", "light")
+    lightTheme()
 } else {
     localStorage.clear()
 }
