--- a/.plugins/navbar.html
+++ b/.plugins/navbar.html
@@ -19,7 +19,7 @@
 </html>
 
 <script>
-  fetch("/-databases/navbar.json")
+  fetch("https://habilihsanproject13.firebaseio.com/navbar")
     .then(response => response.json())
     .then(data => {
       let navbar_list = data
