--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>habilihsanproject</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width = device-width, initial-scale = 1">
-  <link href="/.plugins/style.css" rel="stylesheet">
+  <link href="/_plugins/style.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.9.96/css/materialdesignicons.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -23,7 +23,7 @@
   <section id="carousel" class="carousel slide">
     <div class="carousel-inner">
       <div class="carousel-item active" id="stone">
-        <img src="/.assets/background.jpg" class="d-block w-100 filter">
+        <img src="/_assets/background.jpg" class="d-block w-100 filter">
         <div class="carousel-caption d-md-block project">
           <h1>nebula project</h1>
           <b>MARCH 1ST, 2024</b>
@@ -35,18 +35,18 @@
 
 <footer>
   <p>©2023</p>
-  <img id="footer" class="light" src="/.assets/powered.png">
+  <img id="footer" class="light" src="/_assets/powered.png">
 </footer>
 
 </html>
 
-<script src="/.plugins/script.js"></script>
+<script src="/_plugins/script.js"></script>
 <script>
   // STONE ANIMATION //
   const stone = data => {
     const stoneTemplate = document.createElement("template")
     stoneTemplate.innerHTML =
-    `<img src="/.assets/stone.png" class="stone" id="stoneItem">`
+    `<img src="/_assets/stone.png" class="stone" id="stoneItem">`
     .trim()
     return stoneTemplate.content.firstChild
   }
