--- a/-plugins/navbar.html
+++ b/-plugins/navbar.html
@@ -1,8 +1,8 @@
 <html>
     <nav class="navbar navbar-expand-lg bg-body-tertiary contain">
           <a id="logo" class="navbar-brand logo light" href="https://habilihsanproject.github.io/">
-            <img src="https://raw.githubusercontent.com/HABILIHSANPROJECT/habilihsanproject.github.io/main/.assets/logo.png" />
-            <img style="width: 50px;" src="https://raw.githubusercontent.com/HABILIHSANPROJECT/habilihsanproject.github.io/main/.assets/title.png" />
+            <img src="/-assets/logo.png" />
+            <img style="width: 50px;" src="/-assets/title.png" />
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
