--- a/-plugins/navbar.html
+++ b/-plugins/navbar.html
@@ -18,7 +18,7 @@
     </nav>
 </html>
 
-<script src="/-plugins/firebase.js"></script>
+<script type="module" src="/-plugins/firebase.js"></script>
 <script>
   var database = firebase.database()
   var dataRef = database.ref("https://habilihsanproject13.firebaseio.com/").child("navbar");
