--- a/-plugins/navbar.html
+++ b/-plugins/navbar.html
@@ -18,7 +18,8 @@
     </nav>
 </html>
 
-<script type="module" src="/-plugins/firebase.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+<script src="/-plugins/firebase.js"></script>
 <script>
   var database = firebase.database()
   var dataRef = database.ref("https://habilihsanproject13.firebaseio.com/").child("navbar");
