--- a/-plugins/navbar.html
+++ b/-plugins/navbar.html
@@ -18,7 +18,7 @@
     </nav>
 </html>
 
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+<script src="https://cdn.firebase.com/js/client/2.2.1/firebase.js"></script>
 <script src="/-plugins/firebase.js"></script>
 <script>
   var database = firebase.database()
