--- a/-plugins/navbar.html
+++ b/-plugins/navbar.html
@@ -19,9 +19,8 @@
 </html> 
 
 <script src="https://www.gstatic.com/firebasejs/9.18.0/firebase-app.js"></script>
-<script src="/-plugins/firebase.js"></script>
+<script src="/-plugins/firebase.js" type="modul"></script>
 <script>
-  var database = firebase.database()
   var dataRef = database.ref("https://habilihsanproject13.firebaseio.com/").child("navbar");
 dataRef.on('value', function(snapshot) {
   console.log(snapshot.val());
