--- a/-plugins/navbar.html
+++ b/-plugins/navbar.html
@@ -19,7 +19,7 @@
 </html> 
 
 <script src="https://www.gstatic.com/firebasejs/9.18.0/firebase-app.js"></script>
-<script src="/-plugins/firebase.js" type="modul"></script>
+<script src="/-plugins/firebase.js" type="module"></script>
 <script>
 import { database } from "/-plugins/firebase.js" 
 var dataRef = database.ref("https://habilihsanproject13.firebaseio.com/").child("navbar");
