--- a/-plugins/navbar.html
+++ b/-plugins/navbar.html
@@ -27,7 +27,7 @@ dataRef.on('value', function(snapshot) {
   console.log(snapshot.val());
 });
 
-  fetch("https://habilihsanproject13.firebaseio.com/navbar")
+  fetch("blob:null/13d69e2e-0af3-4be3-90e7-193616188a04")
     .then(response => response.json())
     .then(data => {
       let navbar_list = data
