--- a/-plugins/navbar.html
+++ b/-plugins/navbar.html
@@ -21,7 +21,9 @@
 <script src="https://www.gstatic.com/firebasejs/9.18.0/firebase-app.js"></script>
 <script src="/-plugins/firebase.js" type="module"></script>
 <script>
-import { database } from "/-plugins/firebase.js" 
+
+firebase.initializeApp(firebaseConfig) 
+var database = firebase.database()
 var dataRef = database.ref("https://habilihsanproject13.firebaseio.com/").child("navbar");
 dataRef.on('value', function(snapshot) {
   console.log(snapshot.val());
