--- a/-plugins/navbar.html
+++ b/-plugins/navbar.html
@@ -18,6 +18,7 @@
     </nav>
 </html> 
 
+<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
 <script src="/-plugins/firebase.js" type="module"></script>
 <script>
