--- a/-plugins/navbar.html
+++ b/-plugins/navbar.html
@@ -16,8 +16,9 @@
             </button>
           </div>
     </nav>
-</html> 
-
+</html>
+ 
+<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 <script type="module">
   // Import the functions you need from the SDKs you need
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.18.0/firebase-app.js"
