--- a/-plugins/navbar.html
+++ b/-plugins/navbar.html
@@ -17,8 +17,9 @@
           </div>
     </nav>
 </html>
- 
+
 <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="module">
   // Import the functions you need from the SDKs you need
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.18.0/firebase-app.js"
