--- a/-plugins/navbar.html
+++ b/-plugins/navbar.html
@@ -23,6 +23,7 @@
 <script type="module">
   // Import the functions you need from the SDKs you need
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.18.0/firebase-app.js"
+  import { firebase } from "https://cdn.firebase.com/js/client/2.2.1/firebase.js"
   // TODO: Add SDKs for Firebase products that you want to use
   // https://firebase.google.com/docs/web/setup#available-libraries
 
