--- a/-plugins/navbar.html
+++ b/-plugins/navbar.html
@@ -18,36 +18,17 @@
     </nav>
 </html>
 
-<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.18.0/firebase-app.js"
-  import { firebase } from "https://cdn.firebase.com/js/client/2.2.1/firebase.js"
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
-
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
-    apiKey: "AIzaSyDSDIWEIdJuA2Z3tVC8fIS8eFvRG8HkXwQ",
-    authDomain: "habilihsanproject13.firebaseapp.com",
-    databaseURL: "https://habilihsanproject13.firebaseio.com",
-    projectId: "habilihsanproject13",
-    storageBucket: "habilihsanproject13.appspot.com",
-    messagingSenderId: "479562057640",
-    appId: "1:479562057640:web:432df6f60898cef2297f9d",
-    measurementId: "G-LM5DS0C4KS"
-  }
-
-  // Initialize Firebase
-  initializeApp(firebaseConfig)
-</script>
+<script src="./firebase.js" type="module"></script>
 <script>
-var database = firebase.database()
-var dataRef = database.ref("https://habilihsanproject13.firebaseio.com/").child("navbar");
-dataRef.on('value', function(snapshot) {
-  console.log(snapshot.val());
+  const dbRef = ref(database);
+get(child(dbRef, `navbar`)).then((snapshot) => {
+  if (snapshot.exists()) {
+    console.log(snapshot.val());
+  } else {
+    console.log("No data available");
+  }
+}).catch((error) => {
+  console.error(error);
 });
 
   fetch("blob:null/13d69e2e-0af3-4be3-90e7-193616188a04")
