--- a/-plugins/navbar.html
+++ b/-plugins/navbar.html
@@ -18,21 +18,8 @@
     </nav>
 </html>
 
-<script src="./firebase.js" type="module">
-  import { ref, child, get } from "https://www.gstatic.com/firebasejs/9.19.0/firebase-database.js"
-</script>
+<script src="./firebase.js" type="module"></script>
 <script>
-  const dbRef = ref(database);
-get(child(dbRef, `navbar`)).then((snapshot) => {
-  if (snapshot.exists()) {
-    console.log(snapshot.val());
-  } else {
-    console.log("No data available");
-  }
-}).catch((error) => {
-  console.error(error);
-});
-
   fetch("blob:null/13d69e2e-0af3-4be3-90e7-193616188a04")
     .then(response => response.json())
     .then(data => {
