--- a/-plugins/navbar.html
+++ b/-plugins/navbar.html
@@ -18,7 +18,7 @@
     </nav>
 </html>
 
-<script src="./firebase.js" type="module"></script>
+<script src="../-plugins/firebase.js" type="module"></script>
 <script>
   fetch("blob:null/13d69e2e-0af3-4be3-90e7-193616188a04")
     .then(response => response.json())
