--- a/-plugins/navbar.html
+++ b/-plugins/navbar.html
@@ -34,7 +34,7 @@
   })
 </script>
 <script>
-  fetch("blob:null/13d69e2e-0af3-4be3-90e7-193616188a04")
+  fetch("")
     .then(response => response.json())
     .then(data => {
       let navbar_list = data
