--- a/-plugins/navbar.html
+++ b/-plugins/navbar.html
@@ -19,9 +19,9 @@
 
 </html>
 
+<script src="../-plugins/firebase.js" type="module"></script>
 <script type="module">
   import { ref, child, get } from "https://www.gstatic.com/firebasejs/9.18.0/firebase-database.js"
-  const database = localStorage.getItem("data")
   const dbRef = ref(database)
   get(child(dbRef, `navbar`)).then((snapshot) => {
     if (snapshot.exists()) {
