--- a/-plugins/navbar.html
+++ b/-plugins/navbar.html
@@ -22,7 +22,7 @@
 <script src="../-plugins/firebase.js" type="module"></script>
 <script type="module">
   import { ref, child, get } from "https://www.gstatic.com/firebasejs/9.18.0/firebase-database.js"
-  const dbRef = ref(database)
+  const dbRef = ref(window.database)
   get(child(dbRef, `navbar`)).then((snapshot) => {
     if (snapshot.exists()) {
       console.log(snapshot.val())
