--- a/-plugins/navbar.html
+++ b/-plugins/navbar.html
@@ -20,8 +20,18 @@
 </html>
 
 <script src="../-plugins/firebase.js" type="module"></script>
-<script>
-
+<script type="module">
+  import { ref, child, get } from "https://www.gstatic.com/firebasejs/9.18.0/firebase-database.js"
+  const db = ref(JSON.parse(localStorage.getItem("navbar")))
+  get(child(db, "navbar")).then((snapshot) => {
+    if (snapshot.exists()) {
+      localStorage.setItem("navbar", snapshot.val())
+    } else {
+      console.log("No data available")
+    }
+  }).catch((error) => {
+    console.error(error)
+  })
   let navbar_list = localStorage.getItem("navbar")
   let navbarList = document.querySelector("#navbarList")
   let navbarLink = document.getElementById("navbarLink")
