--- a/-plugins/navbar.html
+++ b/-plugins/navbar.html
@@ -40,7 +40,7 @@
         .trim()
     return template.content.firstChild
   }
-  for (i in navbar_list) {
+  for (let i in navbar_list) {
     navbarList.append(navbar(0))
   }
   let title = document.getElementsByTagName("title")[0]
