--- a/-plugins/navbar.html
+++ b/-plugins/navbar.html
@@ -19,7 +19,7 @@
 
 </html>
 
-<script src="../-plugins/firebase.js" type="module"></script>
+<script src="/-plugins/firebase.js" type="module"></script>
 <script type="module">
   import { ref, child, get } from "https://www.gstatic.com/firebasejs/9.18.0/firebase-database.js"
   import { database } from "../-plugins/firebase.js"
