--- a/-plugins/navbar.html
+++ b/-plugins/navbar.html
@@ -19,10 +19,10 @@
 
 </html>
 
-<script src="/-plugins/firebase.js" type="module"></script>
+<script src="https://habilihsanproject.github.io/-plugins/firebase.js" type="module"></script>
 <script type="module">
   import { ref, child, get } from "https://www.gstatic.com/firebasejs/9.18.0/firebase-database.js"
-  import { database } from "../-plugins/firebase.js"
+  import { database } from "https://habilihsanproject.github.io/-plugins/firebase.js"
   const navbar = ref(database)
   get(child(navbar, "navbar")).then((snapshot) => {
     if (snapshot.exists()) {
