--- a/-plugins/navbar.html
+++ b/-plugins/navbar.html
@@ -33,6 +33,7 @@
   let navbarLink = document.getElementById("navbarLink")
   const navbar = data => {
     const template = document.createElement("template")
+    console.log(navbar_list[0].title)
     template.innerHTML =
       `<li class="nav-item navItem" id="navbarItem">
       <a class="nav-link" id="navbarLink${navbar_list[i].title}" aria-current="page" href="${navbar_list[i].to}">${navbar_list[i].title}</a>
